# pico2W-x86_64-UEFI-Shell

./: .gitignore  README  deps.txt
firmware/: CMakeLists.txt  main.c  msc_disk.c  tusb_config.h  usb_descriptors.c
